--- a/bower.json
+++ b/bower.json
@@ -19,11 +19,11 @@
     "bootswatch": "^3.3.7",
     "cropper": "^2.3.4",
     "datetimepicker": "^2.5.4",
-    "dropzone": "^4.3.0",
     "font-awesome": "^4.7.0",
     "jquery": "^3.1.1",
     "jquery.scrollTo": "^2.1.2",
     "jquery-ui": "^1.12.1",
+    "jstree": "^3.3.4",
     "magnific-popup": "^1.1.0",
     "noty": "^2.4.0",
     "scrollup": "^2.4.1",
@@ -33,6 +33,11 @@
     "datatables.net": "^1.10.15",
     "datatables.net-bs": "^1.10.15",
     "bootstrap-filestyle": "^1.2.1",
-    "fileicon.css": "^0.1.0"
+    "fileicon.css": "^0.1.0",
+    "summernote": "^0.8.7",
+    "dropzone": "^5.1.1"
+  },
+  "resolutions": {
+    "dropzone": "^5.1.1"
   }
 }
