--- a/bower.json
+++ b/bower.json
@@ -35,7 +35,9 @@
     "bootstrap-filestyle": "^1.2.1",
     "fileicon.css": "^0.1.0",
     "summernote": "^0.8.7",
-    "dropzone": "^5.1.1"
+    "dropzone": "^5.1.1",
+    "waypoints": "^4.0.1",
+    "owl.carousel": "^2.2.1"
   },
   "resolutions": {
     "dropzone": "^5.1.1"
